# dartmouth-ai-backend

./: .gitignore  README.md  pyproject.toml  requirements.txt
benchmark/: benchmark.py  viz.ipynb
benchmark/benchmark_files/: frankenstein.txt
dartmouth_ai_backend/base/: __init__.py  auth.py  citable.py
dartmouth_ai_backend/langchain_components/: __init__.py  dartmouth_chat_model.py  dartmouth_embeddings.py
dartmouth_ai_backend/language_detection/: __init__.py  ld.py
dartmouth_ai_backend/named_entity_recognition/: __init__.py  ner.py
dartmouth_ai_backend/object_detection/: __init__.py  object_detection.py
dartmouth_ai_backend/sentiment_analysis/: __init__.py  sentiment_analysis.py
dartmouth_ai_backend/speaker_diarization/: __init__.py  speaker_diarization.py
dartmouth_ai_backend/speech_recognition/: __init__.py  speech_recognition.py
docs/source/: conf.py  dartmouth_ai_backend.language_detection.rst  dartmouth_ai_backend.named_entity_recognition.rst  dartmouth_ai_backend.object_detection.rst  dartmouth_ai_backend.rst  dartmouth_ai_backend.sentiment_analysis.rst  dartmouth_ai_backend.speech_recognition.rst  index.rst  modules.rst
language_detection/: de.txt  ld.py
named_entity_recognition/: ner.html  ner.py  wiki.txt
sentiment_analysis/: sentiment_analysis.py
test/: README.md  test.py
